--- a/main_two.html
+++ b/main_two.html
@@ -9,7 +9,7 @@
 </head>
 <body onload="draw()">
     <center>
-        <form id="form_data">
+        <form id="form_data" method="GET">
             <label for="height">HEIGHT:</label>
             <input type="number" id="height" name="height" min="1" max="1200" required>
             <br>
