--- a/form_page.html
+++ b/form_page.html
@@ -11,12 +11,17 @@
     <div class="form_div">
         <form method="GET" id="form_entry" class="form_entry">
             <input type="file" id="form_image" name="image">
-            <!-- <button>SUBMIT</button> -->
         </form>
     </div>
     <div class="image_preview" id="image_preview">
         <img src="" alt="image" class="previewImageTag">
         <span class="image_preview_text">Image Preview</span>
+    </div>
+    <div>
+        <button id="submit_button">SUBMIT</button>
+    </div>
+    <div>
+        <canvas id="viewport" height="1200" width="1200"></canvas>
     </div>
 </body>
 <script src="./form_page_script.js"></script>
